[gd_scene load_steps=15 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Crate.tscn" type="PackedScene" id=3]
[ext_resource path="res://Levels/Level3.gd" type="Script" id=4]
[ext_resource path="res://UIcomponents/Pause.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/SlidingGlassDoor.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/BoxPressurePlate.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Door.tscn" type="PackedScene" id=8]

[sub_resource type="CubeMesh" id=10]

[sub_resource type="BoxShape" id=11]

[sub_resource type="CubeMesh" id=14]

[sub_resource type="BoxShape" id=15]

[sub_resource type="CubeMesh" id=12]

[sub_resource type="BoxShape" id=13]

[sub_resource type="BoxShape" id=17]
extents = Vector3( 2.05249, 2.82671, 1.42729 )

[node name="Level3" type="Node"]
script = ExtResource( 4 )

[node name="World" type="Spatial" parent="."]

[node name="Ground" type="StaticBody" parent="World"]
transform = Transform( 0.796316, 0, 0, 0, 32.0951, 0, 0, 0, 0.515626, 0, -31.1269, -5.73975 )

[node name="MeshInstance" type="MeshInstance" parent="World/Ground"]
transform = Transform( 80, 0, 0, 0, 1, 0, 0, 0, 80, 0, 0, 0 )
mesh = SubResource( 10 )

[node name="CollisionShape" type="CollisionShape" parent="World/Ground"]
transform = Transform( 80, 0, 0, 0, 1, 0, 0, 0, 80, 0, 0, 0 )
shape = SubResource( 11 )

[node name="Wall1" type="StaticBody" parent="World"]
transform = Transform( 1.00444, 0, 0, 0, 1, 0, 0, 0, 3.51506, 23.5439, 16.9941, -37.7446 )

[node name="MeshInstance" type="MeshInstance" parent="World/Wall1"]
transform = Transform( 40, 0, 0, 0, 16, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 14 )

[node name="CollisionShape" type="CollisionShape" parent="World/Wall1"]
transform = Transform( 40, 0, 0, 0, 16, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 15 )

[node name="Wall2" type="StaticBody" parent="World"]
transform = Transform( -2.49484e-06, 0, 57.0753, 0, 1, 0, -0.727353, 0, -3.17936e-08, -60.8232, 16.9941, 6.55375 )

[node name="MeshInstance" type="MeshInstance" parent="World/Wall2"]
transform = Transform( 40, 0, 0, 0, 16, 0, -3.41061e-13, 0, 1, 0, 0, 0 )
mesh = SubResource( 12 )

[node name="CollisionShape" type="CollisionShape" parent="World/Wall2"]
transform = Transform( 40, 0, 0, 0, 16, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 13 )

[node name="DirectionalLight" type="DirectionalLight" parent="World"]
transform = Transform( 0.797826, -0.350946, -0.490214, 0.602887, 0.464422, 0.648721, 0, -0.813111, 0.582109, 22.6294, 5.29881, 0 )
light_color = Color( 0.368627, 0.298039, 0.658824, 1 )
light_energy = 3.856
shadow_enabled = true

[node name="DirectionalLight2" type="DirectionalLight" parent="World"]
transform = Transform( 0.736754, 0.0403968, 0.674953, -0.539666, 0.636537, 0.550982, -0.407375, -0.770188, 0.490772, 22.6294, 5.29881, 11.4556 )
light_color = Color( 0.560784, 0.188235, 0.772549, 1 )
light_energy = 0.927
shadow_color = Color( 0.560784, 0.188235, 0.772549, 1 )

[node name="Wall3" type="StaticBody" parent="World"]
transform = Transform( -0.0798947, 0, 0, 0, 1, 0, 0, 0, 3.51506, -2.4561, 16.9941, 0.613579 )

[node name="MeshInstance" type="MeshInstance" parent="World/Wall3"]
transform = Transform( 40, 0, 0, 0, 16, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 14 )

[node name="CollisionShape" type="CollisionShape" parent="World/Wall3"]
transform = Transform( 40, 0, 0, 0, 16, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 15 )

[node name="Wall4" type="StaticBody" parent="World"]
transform = Transform( -0.11932, 0, 0, 0, 1, 0, 0, 0, 3.51506, 58.9256, 16.9941, 0.613579 )

[node name="MeshInstance" type="MeshInstance" parent="World/Wall4"]
transform = Transform( 40, 0, 0, 0, 16, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 14 )

[node name="CollisionShape" type="CollisionShape" parent="World/Wall4"]
transform = Transform( 40, 0, 0, 0, 16, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 15 )

[node name="Wall5" type="StaticBody" parent="World"]
transform = Transform( -1.15398e-07, 0, 2.64, 0, 1, 0, -0.597602, 0, -2.6122e-08, -6.39252, 16.9941, -50.0109 )

[node name="MeshInstance" type="MeshInstance" parent="World/Wall5"]
transform = Transform( 40, 0, -3.55271e-15, 0, 16, 0, -1.13687e-13, 0, 1, 0, 0, 0 )
mesh = SubResource( 12 )

[node name="CollisionShape" type="CollisionShape" parent="World/Wall5"]
transform = Transform( 40, 0, 0, 0, 16, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 13 )

[node name="FinishLight" type="OmniLight" parent="World"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -11.2703, 4.90989, -24.3438 )
light_color = Color( 1, 0.592157, 0.117647, 1 )
light_energy = 3.862
shadow_enabled = true
omni_range = 19.009

[node name="Player" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 21.999, 0.995011, 28.0017 )

[node name="LevelLogic" type="Spatial" parent="."]

[node name="SlidingGlassDoor" parent="LevelLogic" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 27, 0, 0 )

[node name="BoxPressurePlate" parent="LevelLogic" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 22, 1, 13 )

[node name="Uno" parent="LevelLogic" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 17.6165, 1, -18.2758 )

[node name="Dos" parent="LevelLogic" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 23.0186, 1, -18.2758 )

[node name="Tres" parent="LevelLogic" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 28.0186, 1, -18.2758 )

[node name="ExitDoor" parent="LevelLogic" instance=ExtResource( 8 )]
transform = Transform( 0.998949, 0, 0, 0, 0.998949, 0, 0, 0, 0.998949, -6.60168, 0, -24.3004 )

[node name="Crate" parent="LevelLogic" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 28.6726, 3.07414, 24.1228 )

[node name="Crate2" parent="LevelLogic" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 33.2134, 3.06183, 24.1312 )

[node name="Crate3" parent="LevelLogic" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 42.4468, 3.06183, 24.0139 )

[node name="Crate4" parent="LevelLogic" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 37.6472, 3.06183, 24.1312 )

[node name="LevelCompleteArea" type="Area" parent="LevelLogic"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -11.4492, 2.09632, -24.0335 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="LevelLogic/LevelCompleteArea"]
shape = SubResource( 17 )

[node name="HUD" type="Node" parent="."]

[node name="PauseMenu" parent="HUD" instance=ExtResource( 5 )]

[connection signal="pressed" from="LevelLogic/BoxPressurePlate" to="." method="_on_BoxPressurePlate_pressed"]
[connection signal="unpressed" from="LevelLogic/BoxPressurePlate" to="." method="_on_BoxPressurePlate_unpressed"]
[connection signal="pressed" from="LevelLogic/Uno" to="." method="_on_Uno_pressed"]
[connection signal="unpressed" from="LevelLogic/Uno" to="." method="_on_Uno_unpressed"]
[connection signal="pressed" from="LevelLogic/Dos" to="." method="_on_Dos_pressed"]
[connection signal="unpressed" from="LevelLogic/Dos" to="." method="_on_Dos_unpressed"]
[connection signal="pressed" from="LevelLogic/Tres" to="." method="_on_Tres_pressed"]
[connection signal="unpressed" from="LevelLogic/Tres" to="." method="_on_Tres_unpressed"]
[connection signal="body_entered" from="LevelLogic/LevelCompleteArea" to="." method="_on_LevelCompleteArea_body_entered"]
[connection signal="retry" from="HUD/PauseMenu" to="." method="_on_PauseMenu_retry"]
